@@ -1,3 +1,4 @@
+03-march-2010 - prockguy - SDL - VS unisystem keys now configable
 03-march-2010 - prcokguy - SDL - changed default hotkeys and keys to match w32
 03-march-2010 - prockguy - SDL - fixed dpad/joyhat support
 01-march-2010 - adelikat - Movie file format header now has a FDS flag
